welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:5: error: not found: value getLargeurMonde
while (!posFinale) {ecritMessage(""+compt);compt+=1; if(compt%7 == getLargeurMonde()-1) {setPos(getX,getY()+1);comptligne+=1} else {if (comptligne%2==0) {setX(getX+1)} else {setX(getX-1)}} ;ecritMessage(""+compt);compt+=1 }
                                                                   ^